--- a/index.html
+++ b/index.html
@@ -1,165 +1,209 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Aura — генеративна графіка</title>
-  <meta
-    name="description"
-    content="Aura — сервіс генеративної графіки. Створюйте унікальні візерунки на основі дати народження."
-  />
+    <title>Aura — генеративна графіка</title>
+    <meta
+      name="description"
+      content="Aura — сервіс генеративної графіки. Створюйте унікальні візерунки на основі дати народження."
+    />
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="Aura — генеративна графіка" />
-  <meta
-    property="og:description"
-    content="Створюйте унікальні візерунки на основі дати народження."
-  />
-  <meta property="og:image" content="https://aura.bit.city/preview.png" />
-  <meta property="og:url" content="https://aura.bit.city/" />
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Aura — генеративна графіка" />
+    <meta
+      property="og:description"
+      content="Створюйте унікальні візерунки на основі дати народження."
+    />
+    <meta property="og:image" content="https://aura.bit.city/preview.png" />
+    <meta property="og:url" content="https://aura.bit.city/" />
 
-  <!-- Twitter Card -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Aura — генеративна графіка" />
-  <meta
-    name="twitter:description"
-    content="Створюйте унікальні візерунки на основі дати народження."
-  />
-  <meta name="twitter:image" content="https://aura.bit.city/preview.png" />
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Aura — генеративна графіка" />
+    <meta
+      name="twitter:description"
+      content="Створюйте унікальні візерунки на основі дати народження."
+    />
+    <meta name="twitter:image" content="https://aura.bit.city/preview.png" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://aura.bit.city/" />
+    <!-- Canonical -->
+    <link rel="canonical" href="https://aura.bit.city/" />
 
-  <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="client/assets/css/topbar.css" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="client/assets/css/topbar.css" />
 
-  <!-- Favicon (опційно) -->
-  <link rel="icon" href="assets/img/favicon.png" type="image/png" />
-</head>
+    <!-- Favicon (опційно) -->
+    <link rel="icon" href="assets/img/favicon.png" type="image/png" />
+  </head>
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-R03TE5MZQ7"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-R03TE5MZQ7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
 
-  gtag('config', 'G-R03TE5MZQ7');
-</script>
+    gtag("config", "G-R03TE5MZQ7");
+  </script>
   <body>
-    <!-- Вирівняна верхня панель із керуванням датою, режимами та мовою -->
-    <header class="topbar" role="banner" aria-label="Основна панель керування">
-      <div class="topbar__left">
-        <label class="field" for="dateInput">
-          <span class="field__label" data-i18n="topBarLabel">Твоя дата народження</span>
-          <input
-            id="dateInput"
-            type="date"
-            inputmode="numeric"
-            autocomplete="bday"
-            aria-describedby="dateHelp"
-            required
-          />
-          <small id="dateHelp" class="field__hint" data-i18n="date_help">
-            Обери дату народження (без часу).
-          </small>
-        </label>
+    <div class="app">
+      <header class="header">
+        <h1 class="title">AURA</h1>
+        <p class="subtitle" id="subtitle" data-i18n="subtitle">
+          Generative magic of your date
+        </p>
+      </header>
 
-        <label class="field field--sm" for="gender">
-          <span class="field__label" data-i18n="gender_label">Стать</span>
-          <div class="select">
-            <select id="gender" name="gender" aria-label="Стать">
-              <option value="unspecified" selected data-i18n="gender_unspecified">Не вказувати</option>
-              <option value="female" data-i18n="gender_female">Жіноча</option>
-              <option value="male" data-i18n="gender_male">Чоловіча</option>
-            </select>
+      <!-- Оновлена навігаційна панель у стилі AURA -->
+      <nav class="topbar" role="banner" aria-label="Основна панель керування">
+        <div class="topbar-container">
+          <div class="topbar-grid">
+            <div class="topbar-section topbar-section--left">
+              <label class="field" for="dateInput">
+                <span class="field__label" data-i18n="topBarLabel">Твоя дата народження</span>
+                <input
+                  id="dateInput"
+                  type="date"
+                  class="date-input"
+                  inputmode="numeric"
+                  autocomplete="bday"
+                  aria-describedby="dateHelp"
+                  required
+                />
+                <small id="dateHelp" class="field__hint" data-i18n="date_help">
+                  Обери дату народження (без часу).
+                </small>
+              </label>
+
+              <label class="field field--sm" for="gender">
+                <span class="field__label" data-i18n="gender_label">Стать</span>
+                <div class="select select--enhanced">
+                  <select id="gender" name="gender" aria-label="Стать">
+                    <option value="unspecified" selected data-i18n="gender_unspecified">Не вказувати</option>
+                    <option value="female" data-i18n="gender_female">Жіноча</option>
+                    <option value="male" data-i18n="gender_male">Чоловіча</option>
+                  </select>
+                  <div class="select__arrow" aria-hidden="true">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                      <polyline points="6,9 12,15 18,9"></polyline>
+                    </svg>
+                  </div>
+                </div>
+              </label>
+
+              <div class="topbar__fallback" id="native-date-controls">
+                <div class="fallback-inputs" id="fallback-inputs" hidden>
+                  <div class="fallback-group">
+                    <label for="daySelect" data-i18n="fallbackDayLabel">День</label>
+                    <select id="daySelect"></select>
+                  </div>
+                  <div class="fallback-group">
+                    <label for="monthSelect" data-i18n="fallbackMonthLabel">Місяць</label>
+                    <select id="monthSelect"></select>
+                  </div>
+                  <div class="fallback-group">
+                    <label for="yearSelect" data-i18n="fallbackYearLabel">Рік</label>
+                    <select id="yearSelect"></select>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="topbar-section topbar-section--center">
+              <button id="btnRun" class="generate-button" type="button" data-i18n="run_btn" disabled>
+                Запустити
+              </button>
+            </div>
+
+            <div class="topbar-section topbar-section--right">
+              <label for="langSelect" class="visually-hidden" data-i18n="lang_label">Мова</label>
+              <div class="select select--sm select--enhanced" aria-label="Мова інтерфейсу">
+                <select
+                  id="langSelect"
+                  aria-label="Language"
+                  data-i18n-attr="aria-label"
+                  data-i18n="lang_label"
+                >
+                  <option value="ua">UA</option>
+                  <option value="en">EN</option>
+                </select>
+                <div class="select__arrow" aria-hidden="true">
+                  <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <polyline points="6,9 12,15 18,9"></polyline>
+                  </svg>
+                </div>
+              </div>
+
+              <div
+                class="mode-toggle"
+                id="scene-toggle"
+                role="group"
+                data-i18n-attr="aria-label"
+                data-i18n="sceneToggleAria"
+              >
+                <button
+                  type="button"
+                  class="mode-toggle__btn"
+                  data-scene="lissajous"
+                  aria-pressed="false"
+                  data-i18n="sceneLissajous"
+                >
+                  Ліссажу
+                </button>
+                <button
+                  type="button"
+                  class="mode-toggle__btn"
+                  data-scene="rune"
+                  aria-pressed="false"
+                  data-i18n="sceneRune"
+                >
+                  Руни
+                </button>
+              </div>
+
+              <button
+                id="btnHelp"
+                type="button"
+                class="help-button"
+                aria-haspopup="dialog"
+                aria-controls="info-modal"
+                data-i18n-attr="aria-label"
+                data-i18n="infoAriaLabel"
+              >
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="12" cy="12" r="10"></circle>
+                  <path d="m9,9a3,3,0,1,1,4,2.64v.36"></path>
+                  <circle cx="12" cy="19" r="1"></circle>
+                </svg>
+              </button>
+            </div>
           </div>
-        </label>
+        </div>
+      </nav>
 
-        <div class="topbar__fallback" id="native-date-controls">
-          <div class="fallback-inputs" id="fallback-inputs" hidden>
-            <div class="fallback-group">
-              <label for="daySelect" data-i18n="fallbackDayLabel">День</label>
-              <select id="daySelect"></select>
-            </div>
-            <div class="fallback-group">
-              <label for="monthSelect" data-i18n="fallbackMonthLabel">Місяць</label>
-              <select id="monthSelect"></select>
-            </div>
-            <div class="fallback-group">
-              <label for="yearSelect" data-i18n="fallbackYearLabel">Рік</label>
-              <select id="yearSelect"></select>
-            </div>
+      <main class="pattern-area">
+        <div class="canvas-container" id="canvas-wrapper">
+          <canvas id="scene" aria-hidden="true"></canvas>
+          <div class="canvas-placeholder" id="canvas-placeholder" data-i18n="placeholderText">
+            Enter your birth date to generate your unique aura pattern
           </div>
         </div>
-      </div>
+      </main>
 
-      <div class="topbar__center">
-        <button id="btnRun" class="btn btn--primary" type="button" data-i18n="run_btn" disabled>
-          Запустити
-        </button>
-      </div>
-
-      <div class="topbar__right">
-        <label for="langSelect" class="visually-hidden" data-i18n="lang_label">Мова</label>
-        <div class="select select--sm" aria-label="Мова інтерфейсу">
-          <select
-            id="langSelect"
-            aria-label="Language"
-            data-i18n-attr="aria-label"
-            data-i18n="lang_label"
-          >
-            <option value="ua">UA</option>
-            <option value="en">EN</option>
-          </select>
-        </div>
-
-        <div
-          class="segmented"
-          id="scene-toggle"
-          role="group"
-          data-i18n-attr="aria-label"
-          data-i18n="sceneToggleAria"
-        >
-          <button
-            type="button"
-            class="segmented__btn"
-            data-scene="lissajous"
-            aria-pressed="false"
-            data-i18n="sceneLissajous"
-          >
-            Ліссажу
-          </button>
-          <button
-            type="button"
-            class="segmented__btn"
-            data-scene="rune"
-            aria-pressed="false"
-            data-i18n="sceneRune"
-          >
-            Руни
-          </button>
-        </div>
-
-        <button
-          id="btnHelp"
-          type="button"
-          class="icon-btn"
-          aria-haspopup="dialog"
-          aria-controls="info-modal"
-          data-i18n-attr="aria-label"
-          data-i18n="infoAriaLabel"
-        >
-          ?
-        </button>
-      </div>
-    </header>
-
-    <!-- Головне полотно для рендеру сцен -->
-    <canvas id="scene" aria-hidden="true"></canvas>
+      <footer class="footer">
+        <p class="footer-text">
+          aura.bit.city • <span id="footer-description" data-i18n="footerDescription">
+            Combining ancient calendars with modern graphics
+          </span>
+        </p>
+      </footer>
+    </div>
 
     <!-- Модальне вікно з поясненням задуму сайту -->
     <div
