--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="client/assets/css/theme.css" />
     <link rel="stylesheet" href="client/assets/css/topbar.css" />
+    <link rel="stylesheet" href="client/assets/css/desc.css" />
 
     <!-- Favicon (опційно) -->
     <link rel="icon" href="assets/img/favicon.png" type="image/png" />
@@ -194,28 +195,56 @@
       </nav>
 
       <main class="pattern-area">
-        <div class="canvas-container" id="canvas-wrapper">
-          <canvas id="scene" aria-hidden="true"></canvas>
-          <div class="canvas-placeholder" id="canvas-placeholder" data-i18n="placeholderText">
-            Enter your birth date to generate your unique aura pattern
+        <div class="pattern-layout">
+          <div class="canvas-container" id="canvas-wrapper">
+            <canvas id="scene" aria-hidden="true"></canvas>
+            <div class="canvas-placeholder" id="canvas-placeholder" data-i18n="placeholderText">
+              Enter your birth date to generate your unique aura pattern
+            </div>
+            <button
+              class="canvas-toggle"
+              id="canvas-toggle"
+              type="button"
+              aria-expanded="false"
+              aria-controls="scene"
+            >
+              <span class="canvas-toggle__icon" aria-hidden="true">
+                <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="9 3 3 3 3 9"></polyline>
+                  <polyline points="15 21 21 21 21 15"></polyline>
+                  <line x1="3" y1="3" x2="10" y2="10"></line>
+                  <line x1="21" y1="21" x2="14" y2="14"></line>
+                </svg>
+              </span>
+              <span class="canvas-toggle__label" id="canvas-toggle-label">Expand</span>
+            </button>
           </div>
-          <button
-            class="canvas-toggle"
-            id="canvas-toggle"
-            type="button"
-            aria-expanded="false"
-            aria-controls="scene"
+          <aside
+            class="description-panel"
+            id="aura-desc"
+            aria-live="polite"
+            aria-label="Опис комбінації Цолькіна"
           >
-            <span class="canvas-toggle__icon" aria-hidden="true">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <polyline points="9 3 3 3 3 9"></polyline>
-                <polyline points="15 21 21 21 21 15"></polyline>
-                <line x1="3" y1="3" x2="10" y2="10"></line>
-                <line x1="21" y1="21" x2="14" y2="14"></line>
-              </svg>
-            </span>
-            <span class="canvas-toggle__label" id="canvas-toggle-label">Expand</span>
-          </button>
+            <div class="aura-desc__inner">
+              <header class="aura-desc__header">
+                <h2 class="aura-desc__title">
+                  <span>Опис</span>
+                  <span>Description</span>
+                </h2>
+                <p class="aura-desc__summary" data-role="desc-summary">
+                  Оберіть дату народження, щоб отримати текстову інтерпретацію без перезапуску анімації.
+                </p>
+              </header>
+              <div class="aura-desc__meta" data-role="desc-meta">
+                <span class="aura-desc__tag" data-role="desc-title-tag">Очікування даних</span>
+              </div>
+              <div class="aura-desc__body" data-role="desc-body">
+                <p class="aura-desc__placeholder" data-role="desc-placeholder">
+                  Текст з'явиться після запуску генерації. SVG-гліф залишиться на місці, анімація не перезапуститься.
+                </p>
+              </div>
+            </div>
+          </aside>
         </div>
         <div class="canvas-overlay" id="canvas-overlay" hidden aria-hidden="true"></div>
       </main>
