--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
         </p>
       </header>
 
-      <!-- Оновлена навігаційна панель у стилі AURA -->
-      <nav class="topbar" role="banner" aria-label="Основна панель керування">
-        <div class="topbar-container">
-          <div class="topbar-grid">
-            <div class="topbar-section topbar-section--left">
-              <label class="field" for="dateInput">
-                <span class="field__label" data-i18n="topBarLabel">Твоя дата народження</span>
+      <!-- Головний блок керування у форматі гнучкої сітки без прилипання на мобільних -->
+      <section class="controls" aria-label="Основна панель керування">
+        <div class="controls__container">
+          <div class="controls-grid">
+            <div class="field field-date">
+              <label class="field-control" for="dateInput">
+                <span class="field-label" data-i18n="topBarLabel">Твоя дата народження</span>
                 <input
                   id="dateInput"
                   type="date"
@@ -80,23 +80,7 @@
                 />
               </label>
 
-              <label class="field field--sm" for="gender">
-                <span class="field__label" data-i18n="gender_label">Стать</span>
-                <div class="select select--enhanced">
-                  <select id="gender" name="gender" aria-label="Стать">
-                    <option value="unspecified" selected data-i18n="gender_unspecified">Не вказувати</option>
-                    <option value="female" data-i18n="gender_female">Жіноча</option>
-                    <option value="male" data-i18n="gender_male">Чоловіча</option>
-                  </select>
-                  <div class="select__arrow" aria-hidden="true">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                      <polyline points="6,9 12,15 18,9"></polyline>
-                    </svg>
-                  </div>
-                </div>
-              </label>
-
-              <div class="topbar__fallback" id="native-date-controls">
+              <div class="field-fallback" id="native-date-controls">
                 <div class="fallback-inputs" id="fallback-inputs" hidden>
                   <div class="fallback-group">
                     <label for="daySelect" data-i18n="fallbackDayLabel">День</label>
@@ -114,28 +98,14 @@
               </div>
             </div>
 
-            <div class="topbar-section topbar-section--center">
-              <button id="btnRun" class="generate-button" type="button" data-i18n="run_btn" disabled>
-                Запустити
-              </button>
-            </div>
-
-            <div class="topbar-section topbar-section--right">
-              <!--
-                Для перемикача мови додаємо видимий підпис, щоб елемент вирівнювався
-                з іншими селектами і був зрозумілий користувачу.
-              -->
-              <label class="field field--sm" for="langSelect">
-                <span class="field__label" data-i18n="lang_label">Мова</span>
-                <div class="select select--sm select--enhanced" aria-label="Мова інтерфейсу">
-                  <select
-                    id="langSelect"
-                    aria-label="Language"
-                    data-i18n-attr="aria-label"
-                    data-i18n="lang_label"
-                  >
-                    <option value="ua">UA</option>
-                    <option value="en">EN</option>
+            <div class="field field-gender">
+              <label class="field-control" for="gender">
+                <span class="field-label" data-i18n="gender_label">Стать</span>
+                <div class="select select--enhanced">
+                  <select id="gender" name="gender" aria-label="Стать">
+                    <option value="unspecified" selected data-i18n="gender_unspecified">Не вказувати</option>
+                    <option value="female" data-i18n="gender_female">Жіноча</option>
+                    <option value="male" data-i18n="gender_male">Чоловіча</option>
                   </select>
                   <div class="select__arrow" aria-hidden="true">
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -144,14 +114,16 @@
                   </div>
                 </div>
               </label>
+            </div>
 
-              <label class="field field--sm" for="sceneSelect">
-                <span class="field__label" data-i18n="sceneToggleAria">Вибір сцени</span>
+            <div class="field field-calendar">
+              <label class="field-control" for="sceneSelect">
+                <span class="field-label" data-i18n="sceneToggleAria">Вибір календаря (гороскопу)</span>
                 <div class="select select--enhanced">
                   <select
                     id="sceneSelect"
                     name="scene"
-                    aria-label="Вибір сцени"
+                    aria-label="Вибір календаря"
                     data-i18n-attr="aria-label"
                     data-i18n="sceneToggleAria"
                   >
@@ -166,17 +138,44 @@
                   </div>
                 </div>
               </label>
+            </div>
 
-              <!--
-                Для кнопки довідки створюємо окреме поле з підписом, аби уникнути
-                візуального "просідання" і підвищити зрозумілість інтерфейсу.
-              -->
-              <div class="field field--button">
-                <span class="field__label" data-i18n="help_label">Довідка</span>
+            <div class="mixed-row">
+              <div class="field field-run">
+                <button id="btnRun" class="generate-button" type="button" data-i18n="run_btn" disabled>
+                  Запустити
+                </button>
+              </div>
+
+              <div class="field field-lang">
+                <label class="field-control" for="langSelect">
+                  <span class="field-label" data-i18n="lang_label">Мова</span>
+                  <div class="select select--sm select--enhanced" aria-label="Мова інтерфейсу">
+                    <select
+                      id="langSelect"
+                      class="lang-select"
+                      aria-label="Language"
+                      data-i18n-attr="aria-label"
+                      data-i18n="lang_label"
+                    >
+                      <option value="ua">UA</option>
+                      <option value="en">EN</option>
+                    </select>
+                    <div class="select__arrow" aria-hidden="true">
+                      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="6,9 12,15 18,9"></polyline>
+                      </svg>
+                    </div>
+                  </div>
+                </label>
+              </div>
+
+              <div class="field field-help">
+                <span class="field-label" data-i18n="help_label">Довідка</span>
                 <button
                   id="btnHelp"
                   type="button"
-                  class="help-button"
+                  class="help-button icon-btn"
                   aria-haspopup="dialog"
                   aria-controls="info-modal"
                   data-i18n-attr="aria-label"
@@ -192,7 +191,7 @@
             </div>
           </div>
         </div>
-      </nav>
+      </section>
 
       <main class="pattern-area">
         <div id="aura-page" class="pattern-layout">
